Fix issue on Google Chrome where horizontal scroll appear on resource viewer

--- a/sonar-server/src/main/webapp/stylesheets/style.css
+++ b/sonar-server/src/main/webapp/stylesheets/style.css
@@ -404,11 +404,6 @@ h1 img, .h1 img, h2 img, .h2 img, h3 img, .h3 img, h4 img, .h4 img {
   color: #fff;
 }
 
-table.data {
-  /* Fix an issue on Google Chrome to prevent the horizontal scroll to appear */
-  border-collapse : separate;
-}
-
 table.data > thead > tr > th {
   font-size: 93%;
   padding: 4px 7px 4px 3px;
@@ -2388,9 +2383,12 @@ textarea.width100 {
   margin-bottom: 20px;
 }
 
+.accordion-item table.data {
+  /* Fix an issue on Google Chrome to prevent the horizontal scroll to appear */
+  border-collapse : separate;
+}
+
 .accordion-item-body-medium {
   max-height: 200px;
   overflow: auto;
 }
-
-
